<resources>
    <string name="app_name">YapoTest</string>
    <string name="userTitle">Usuario:</string>
    <string name="nameTitle">Nombre:</string>
    <string name="mailTitle">Email:</string>
    <string name="title_users_list">Listado de Usuarios</string>
    <string name="show_users_list">Mostrar listado de Usuarios</string>
    <string name="title_users_favorite__list">Listado de Usuarios Favoritos</string>
    <string name="show_users_favorite__list">Mostrar listado de Usuarios Favoritos</string>
    <string name="title_dialog_base">No tiene conexión</string>
    <string name="message_dialog_base">Actualmente no tiene una conexión de red. Por favor verifique su conexíon e intente de nuevo</string>
    <string name="button_settings">Ir a la configuración</string>
    <string name="button_exit">Salir</string>

    <string name="not_users">No tiene Conexión a internet. No se puede acceder a los usuarios </string>
    <string name="not_favorite_users">No tiene usuarios Favoritos</string>
    <string name="username_title">Nombre de usuario:</string>
    <string name="addressTitle">Dirección:</string>
    <string name="streetTitle">Calle:</string>
    <string name="suiteTitle">Dpto:</string>
    <string name="cityTitle">Ciudad:</string>
    <string name="zipcodeTitle">Cod. Postal:</string>
    <string name="catchPhraseTitle">Frase Clave:</string>
    <string name="companyTitle">Compañia:</string>
    <string name="otherTitle">Otra:</string>
    <string name="phoneTitle">Telefono:</string>
    <string name="websiteTitle">Web:</string>
    <string name="listAlbumTitle">Listado de Albumes:</string>

</resources>
